# LidarCamCalib

./: CMakeLists.txt  README.md  boxsize.hpp  findboxcorners.cpp  findboxcorners.h  findboxplanes.cpp  findboxplanes.h  main.cpp  plane.hpp  select_image_corners.cpp  select_image_corners.h  utils.cpp  utils.h
data/: 2018-01-31-10-22-07_Velodyne-HDL-64-Data.xyz  Velo-64.xyz  Velo-64.xyz~  cam_intrinsics  coloredPointCloud.ply
